force-app/main/default/objects/Case/fields/Account_phone__c.field-meta.xml
<CustomField>
    <fullName>Account_phone__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account phone</label>
    <type>Text</type>
</CustomField>