force-app/main/default/objects/Case/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remerciement</fullName>
            </value>
            <value>
                <fullName>Réclamation</fullName>
            </value>
            <value>
                <fullName>Demandes clients</fullName>
            </value>
            <value>
                <fullName>Opérationnelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>