force-app/main/default/objects/Case/fields/CDV__c.field-meta.xml
<CustomField>
    <fullName>CDV__c</fullName>
    <label>Cycle de vie (CDV)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CDV</valueSetName>
    </valueSet>
</CustomField>