force-app/main/default/objects/Case/fields/CommerceCloudId__c.field-meta.xml
<CustomField>
    <fullName>CommerceCloudId__c</fullName>
    <label>CommerceCloud Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>