force-app/main/default/objects/Case/fields/Compte_Ambassadeur__c.field-meta.xml
<CustomField>
    <fullName>Compte_Ambassadeur__c</fullName>
    <formula>Account.Magasin_de_rattachement__r.Ambassadeur_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte Ambassadeur</label>
    <type>Checkbox</type>
</CustomField>