force-app/main/default/objects/Case/fields/ContactasGuest__c.field-meta.xml
<CustomField>
    <fullName>ContactasGuest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact as Guest</label>
    <type>Checkbox</type>
</CustomField>