force-app/main/default/objects/Case/fields/ContactLoyaltyCardId__c.field-meta.xml
<CustomField>
    <fullName>ContactLoyaltyCardId__c</fullName>
    <description>Field used on case listview to get information about the customer&apos;s loyalty card</description>
    <formula>Contact.LoyaltyCardID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° Carte U</label>
    <type>Text</type>
</CustomField>