force-app/main/default/objects/Case/fields/CoursesUCaseReason__c.field-meta.xml
<CustomField>
    <fullName>CoursesUCaseReason__c</fullName>
    <description>Reason selected by the customer on Courses U website</description>
    <label>Raison Courses U</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ProductIssue</fullName>
                <label>J&apos;ai un souci avec un produit</label>
            </value>
            <value>
                <fullName>OrderIssue</fullName>
                <label>Problème avec une commande</label>
            </value>
            <value>
                <fullName>DeliveryIssue</fullName>
                <label>Problème avec une livraison</label>
            </value>
            <value>
                <fullName>WebsiteIssue</fullName>
                <label>Problème sur le site</label>
            </value>
            <value>
                <fullName>SuggestProduct</fullName>
                <label>Suggérer un produit</label>
            </value>
            <value>
                <fullName>LoyaltyCardIssue</fullName>
                <label>J&apos;ai un soucis avec ma carte U</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>