force-app/main/default/objects/Case/fields/Demande_d_ambassadeur__c.field-meta.xml
<CustomField>
    <fullName>Demande_d_ambassadeur__c</fullName>
    <formula>IF(
            Compte_Ambassadeur__c = TRUE,
            IMAGE(&quot;/resource/AmbassadeurPicto?&quot;,&quot;Demande d&apos;ambassadeur&quot;,35,35),
            &quot;&quot;
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demande d&apos;ambassadeur</label>
    <type>Text</type>
</CustomField>