force-app/main/default/objects/Case/fields/Demande_escalad_e__c.field-meta.xml
<CustomField>
    <fullName>Demande_escalad_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande escaladée</label>
    <type>Checkbox</type>
</CustomField>