force-app/main/default/objects/Case/fields/Demande_Transferee__c.field-meta.xml
<CustomField>
    <fullName>Demande_Transferee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande Transférée</label>
    <type>Checkbox</type>
</CustomField>