force-app/main/default/objects/Case/fields/Email_Category__c.field-meta.xml
<CustomField>
    <fullName>Email_Category__c</fullName>
    <label>Sous-catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>Classification</valueSetName>
    </valueSet>
</CustomField>