force-app/main/default/objects/Case/fields/Email_Magasin__c.field-meta.xml
<CustomField>
    <fullName>Email_Magasin__c</fullName>
    <label>Email Magasin</label>
    <type>Email</type>
</CustomField>