force-app/main/default/objects/Case/fields/EmailUniqueID__c.field-meta.xml
<CustomField>
    <fullName>EmailUniqueID__c</fullName>
    <description>Field used as external id for data load of backlog emails</description>
    <externalId>true</externalId>
    <label>ID Email</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>