force-app/main/default/objects/Case/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Which environment was this case submitted from.</description>
    <label>Environment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>