force-app/main/default/objects/Case/fields/Envoie_enqu_te_de_satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Envoie_enqu_te_de_satisfaction__c</fullName>
    <label>Enquête sat.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Envoyé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>