force-app/main/default/objects/Case/fields/Fin_SLA_interne__c.field-meta.xml
<CustomField>
    <fullName>Fin_SLA_interne__c</fullName>
    <label>Fin SLA interne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>72 H</fullName>
            </value>
            <value>
                <fullName>48 H</fullName>
            </value>
            <value>
                <fullName>24 H</fullName>
            </value>
            <value>
                <fullName>4 H</fullName>
            </value>
            <value>
                <fullName>Hors SLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>