force-app/main/default/objects/Case/fields/Flow_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Flow_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Bypass</label>
    <type>Checkbox</type>
</CustomField>