force-app/main/default/objects/Case/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>Field used to track data used to create customer when he/she doesn&apos;t exists.</description>
    <label>Nom Complet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>