force-app/main/default/objects/Case/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <label>IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>