force-app/main/default/objects/Case/fields/LoyaltyBirthdate__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyBirthdate__c</fullName>
    <label>Date de naissance (FID)</label>
    <type>Date</type>
</CustomField>