force-app/main/default/objects/Case/fields/loyaltyCardEcu__c.field-meta.xml
<CustomField>
    <fullName>loyaltyCardEcu__c</fullName>
    <label>Solde €uro Carte U</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>