force-app/main/default/objects/Case/fields/LoyaltyCardID__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyCardID__c</fullName>
    <label>Numéro de la Carte U</label>
    <length>255</length>
    <type>Text</type>
</CustomField>