force-app/main/default/objects/Case/fields/LoyaltyCreationDate__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyCreationDate__c</fullName>
    <label>Date de création Carte U</label>
    <type>Date</type>
</CustomField>