force-app/main/default/objects/Case/fields/LoyaltyFirstName__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyFirstName__c</fullName>
    <label>Prénom (FID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>