force-app/main/default/objects/Case/fields/Mass_email__c.field-meta.xml
<CustomField>
    <fullName>Mass_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass email</label>
    <type>Checkbox</type>
</CustomField>