force-app/main/default/objects/Case/fields/Mode_de_cl_ture__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_cl_ture__c</fullName>
    <label>Mode de clôture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unitaire</fullName>
            </value>
            <value>
                <fullName>Modèle 6</fullName>
                <label>Clôture en masse anciennes demandes (Clôture groupée)</label>
            </value>
            <value>
                <fullName>Modèle 1</fullName>
                <label>Problème Connexion (Clôture groupée)</label>
            </value>
            <value>
                <fullName>Modèle 2</fullName>
                <label>Modifier / Annuler commande (Clôture groupée)</label>
            </value>
            <value>
                <fullName>Modèle 3</fullName>
                <label>Créneaux indisponibles (Clôture groupée)</label>
            </value>
            <value>
                <fullName>Modèle 4</fullName>
                <label>Supprimer compte (Clôture groupée)</label>
            </value>
            <value>
                <fullName>Modèle 5</fullName>
                <label>Transfert Magasin (Clôture groupée)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>