force-app/main/default/objects/Case/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Field used to track data used to create customer when he/she doesn&apos;t exists.</description>
    <label>Téléphone</label>
    <type>Phone</type>
</CustomField>