force-app/main/default/objects/Case/fields/PostedFrom__c.field-meta.xml
<CustomField>
    <fullName>PostedFrom__c</fullName>
    <description>When the case is submitted from the web form, this gives the origin of that form (Website or Mobile App)</description>
    <inlineHelpText>Le ticket a-t-il été créé depuis le Site web ou depuis l&apos;Application Mobile ?</inlineHelpText>
    <label>Provenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Web</fullName>
            </value>
            <value>
                <fullName>Application Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>