force-app/main/default/objects/Case/fields/RFM__c.field-meta.xml
<CustomField>
    <fullName>RFM__c</fullName>
    <label>Segmentation RFM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFM</valueSetName>
    </valueSet>
</CustomField>