force-app/main/default/objects/Case/fields/Satisfaction_Client__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Client__c</fullName>
    <description>Rate client satisfaction</description>
    <label>Satisfaction Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non satisfait</fullName>
            </value>
            <value>
                <fullName>Neutre</fullName>
            </value>
            <value>
                <fullName>Satisfait</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>