force-app/main/default/objects/Case/fields/Service_Now_Status_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Now_Status_Update_Date__c</fullName>
    <label>Service Now Status Update Date</label>
    <type>DateTime</type>
</CustomField>