force-app/main/default/objects/Case/fields/ServiceNowId__c.field-meta.xml
<CustomField>
    <fullName>ServiceNowId__c</fullName>
    <externalId>true</externalId>
    <label>ServiceNow Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>