force-app/main/default/objects/Case/fields/ServiceNowStatus__c.field-meta.xml
<CustomField>
    <fullName>ServiceNowStatus__c</fullName>
    <label>ServiceNow Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>