force-app/main/default/objects/Case/fields/SessionStoreId__c.field-meta.xml
<CustomField>
    <fullName>SessionStoreId__c</fullName>
    <description>Field displayed in web-to-case and that contains the store number. The store number is external ID on store and is used to populate the Store field (Store__c)</description>
    <label>Session Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>