force-app/main/default/objects/Case/fields/SLA_24h_Sent__c.field-meta.xml
<CustomField>
    <fullName>SLA_24h_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA 24h Sent</label>
    <type>Checkbox</type>
</CustomField>