force-app/main/default/objects/Case/fields/SLA_48h_Sch_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_48h_Sch_Action_Date__c</fullName>
    <label>SLA 48h Sch Action Date</label>
    <type>DateTime</type>
</CustomField>