force-app/main/default/objects/Case/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <formula>CASE(Fin_SLA_interne__c, 
&quot;4 H&quot;, 
					IMAGE(&quot;/resource/SLA4H?&quot;, &quot;4 H&quot;, 50,50),
&quot;24 H&quot;, 
					IMAGE(&quot;/resource/SLA24H?&quot;, &quot;24 H&quot;,50,50),
&quot;48 H&quot;,
					IMAGE(&quot;/resource/SLA48H?&quot;, &quot;48 H&quot;,50,50),
&quot;Hors SLA&quot;,
					IMAGE(&quot;/resource/SLAHORS?&quot;, &quot;Hors SLA&quot;,50,50),
&quot;72 H&quot;,
IMAGE (&quot;/resource/SLA72H?&quot;,&quot;&quot;,50,50),
				&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Text</type>
</CustomField>