force-app/main/default/objects/Case/fields/SLA_d_origine__c.field-meta.xml
<CustomField>
    <fullName>SLA_d_origine__c</fullName>
    <label>SLA d&apos;origine</label>
    <type>TextArea</type>
</CustomField>