force-app/main/default/objects/Case/fields/SLA_OutOfTime_Sch_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_OutOfTime_Sch_Action_Date__c</fullName>
    <label>SLA OutOfTime Sch Action Date</label>
    <type>DateTime</type>
</CustomField>