force-app/main/default/objects/Case/fields/SLA_OutOfTime_Sent__c.field-meta.xml
<CustomField>
    <fullName>SLA_OutOfTime_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA OutOfTime Sent</label>
    <type>Checkbox</type>
</CustomField>