force-app/main/default/objects/Case/fields/Sous_cause__c.field-meta.xml
<CustomField>
    <fullName>Sous_cause__c</fullName>
    <label>Sous-cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cause__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assortiment</fullName>
            </value>
            <value>
                <fullName>Carte U</fullName>
            </value>
            <value>
                <fullName>Commande non livrée (en partie/en totalité)</fullName>
            </value>
            <value>
                <fullName>Commande non livrée (en partie/en totalité) IDS</fullName>
            </value>
            <value>
                <fullName>DLC</fullName>
            </value>
            <value>
                <fullName>Erreur quantité</fullName>
            </value>
            <value>
                <fullName>Facturation</fullName>
            </value>
            <value>
                <fullName>FLEG</fullName>
            </value>
            <value>
                <fullName>Frais de livraison</fullName>
            </value>
            <value>
                <fullName>Inversion commandes/produits</fullName>
            </value>
            <value>
                <fullName>Inversion sac/commande IDS</fullName>
            </value>
            <value>
                <fullName>Livraison</fullName>
            </value>
            <value>
                <fullName>Magasin</fullName>
            </value>
            <value>
                <fullName>Mise en sac</fullName>
            </value>
            <value>
                <fullName>Montant débité</fullName>
            </value>
            <value>
                <fullName>Pains oubliés</fullName>
            </value>
            <value>
                <fullName>Prix</fullName>
            </value>
            <value>
                <fullName>Produits cassés/ abimés</fullName>
            </value>
            <value>
                <fullName>Produits cassés/ abimés IDS</fullName>
            </value>
            <value>
                <fullName>Produits décongelés</fullName>
            </value>
            <value>
                <fullName>Produits manquants facturés</fullName>
            </value>
            <value>
                <fullName>Promo / réduction</fullName>
            </value>
            <value>
                <fullName>Remboursement</fullName>
            </value>
            <value>
                <fullName>Retard</fullName>
            </value>
            <value>
                <fullName>Retard IDS</fullName>
            </value>
            <value>
                <fullName>Rupture</fullName>
            </value>
            <value>
                <fullName>Service Consommateur</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Substitution</fullName>
            </value>
            <value>
                <fullName>Ticket de caisse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>