force-app/main/default/objects/Case/fields/Status_of_email__c.field-meta.xml
<CustomField>
    <fullName>Status_of_email__c</fullName>
    <label>Etat de réponse automatique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A envoyer</fullName>
            </value>
            <value>
                <fullName>Email envoyé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>