force-app/main/default/objects/Case/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains the Store concerned by the case</description>
    <label>Magasin</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le record type du compte doit être &quot;Magasin&quot;</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Magasin</value>
        </filterItems>
        <infoMessage>Le record type du compte doit être &quot;Magasin&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tickets du Magasin</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>