force-app/main/default/objects/Case/fields/TAG__c.field-meta.xml
<CustomField>
    <fullName>TAG__c</fullName>
    <inlineHelpText>Ajouter des TAG séparés par des virgules.</inlineHelpText>
    <label>TAG</label>
    <type>TextArea</type>
</CustomField>