force-app/main/default/objects/Case/fields/Tagcas__c.field-meta.xml
<CustomField>
    <fullName>Tagcas__c</fullName>
    <label>Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crash</fullName>
            </value>
            <value>
                <fullName>MAJ</fullName>
            </value>
            <value>
                <fullName>version</fullName>
            </value>
            <value>
                <fullName>codebarre</fullName>
            </value>
            <value>
                <fullName>Scroll</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Mailvide</fullName>
            </value>
            <value>
                <fullName>3dsecure</fullName>
            </value>
            <value>
                <fullName>Solde</fullName>
            </value>
            <value>
                <fullName>Prelevement</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Rupture</fullName>
            </value>
            <value>
                <fullName>Substitution</fullName>
            </value>
            <value>
                <fullName>creneau</fullName>
            </value>
            <value>
                <fullName>Liste</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>Non_reconnu</fullName>
            </value>
            <value>
                <fullName>Déjà_utilise</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>FID</fullName>
            </value>
            <value>
                <fullName>MIXTE</fullName>
            </value>
            <value>
                <fullName>6jours</fullName>
            </value>
            <value>
                <fullName>Local_Region</fullName>
            </value>
            <value>
                <fullName>OP10</fullName>
            </value>
            <value>
                <fullName>pbt</fullName>
            </value>
            <value>
                <fullName>Gain</fullName>
            </value>
            <value>
                <fullName>Npec</fullName>
            </value>
            <value>
                <fullName>Favco</fullName>
            </value>
            <value>
                <fullName>mission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>