force-app/main/default/objects/Case/fields/Temps_Traitement_OASIS__c.field-meta.xml
<CustomField>
    <fullName>Temps_Traitement_OASIS__c</fullName>
    <formula>(5 * FLOOR((DATEVALUE(Service_Now_Status_Update_Date__c) - DATEVALUE( CreatedDate )) / 7)) +
MIN(5, MOD(DATEVALUE(Service_Now_Status_Update_Date__c) - DATEVALUE(CreatedDate ), 7)) -
CASE(MOD(DATEVALUE(Service_Now_Status_Update_Date__c) - DATE(1900, 1, 7), 7), 
  0, 0, 
  1, 0, 
  2, 0, 
  3, 0, 
  4, 0, 
  5, 1, 
  6, 2, 
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temps Traitement OASIS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>