force-app/main/default/objects/Case/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U Central</fullName>
            </value>
            <value>
                <fullName>Lyon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>