force-app/main/default/objects/Case/fields/UserAgent__c.field-meta.xml
<CustomField>
    <fullName>UserAgent__c</fullName>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>