force-app/main/default/objects/Case/fields/VCA__c.field-meta.xml
<CustomField>
    <fullName>VCA__c</fullName>
    <label>Segmentation VCA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VCA</valueSetName>
    </valueSet>
</CustomField>