force-app/main/default/objects/Case/fields/WorldlineId__c.field-meta.xml
<CustomField>
    <fullName>WorldlineId__c</fullName>
    <label>Worldline Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>