force-app/main/default/objects/Case/recordTypes/CustomerCase.recordType-meta.xml
<RecordType>
    <fullName>CustomerCase</fullName>
    <active>true</active>
    <businessProcess>Problème sur le site</businessProcess>
    <label>Demande client</label>
</RecordType>