force-app/main/default/objects/Case/recordTypes/Demande_client_Lyon.recordType-meta.xml
<RecordType>
    <fullName>Demande_client_Lyon</fullName>
    <active>true</active>
    <businessProcess>Demande client - Lyon</businessProcess>
    <label>Demande client - Lyon</label>
</RecordType>