force-app/main/default/objects/Case/recordTypes/Paper_Mail_Case.recordType-meta.xml
<RecordType>
    <fullName>Paper_Mail_Case</fullName>
    <active>true</active>
    <businessProcess>Courrier papier</businessProcess>
    <label>Paper Mail Case</label>
</RecordType>